--- a/meliAr.html
+++ b/meliAr.html
@@ -109,16 +109,21 @@
                 </button>
             </div>
             <div class="modal-body">
-                <div id="initialAlert" class="cp-custom-alert cp-custom-alert-info" role="alert">
+                <div id="initialAlert" class="cp-custom-alert cp-custom-alert-info-principal" role="alert">
                     <i class="bi bi-info-circle-fill"></i> Seleccione el tipo de logística para continuar
                 </div>
                 <div class="d-flex justify-content-center mb-3">
-                    <button id="logisticaBsAsButton" class="btn btn-primary mx-2">
-                        <i class="bi bi-truck"></i> Logistica Buenos Aires
-                    </button>
-                    <button id="logisticaSantaFeButton" class="btn btn-primary mx-2">
-                        <i class="bi bi-truck"></i> Logistica Santa Fe
-                    </button>
+                    <div class="btn-group" role="group" aria-label="Basic outlined example">
+                        <button id="logisticaSantaFeButton" class="btn btn-outline-primary">
+                            <i class="bi bi-lightning-charge-fill"></i> Logística 34 Santa Fe
+                        </button>
+                        <button id="logisticaBsAsButton" class="btn btn-outline-primary">
+                            <i class="bi bi-lightning-charge-fill"></i> Logística 35 Buenos Aires
+                        </button>
+                        <button id="logisticaRafaelaButton" class="btn btn-outline-primary">
+                            <i class="bi bi-lightning-charge-fill"></i> Logística 36 Rafaela
+                        </button>
+                    </div>
                 </div>
                 <div id="postalCodesContainer" style="margin-top: 20px; display: none;">
                     <div class="input-group mb-3">
