--- a/despachos.html
+++ b/despachos.html
@@ -86,7 +86,7 @@
             </button>
             <!-- Nuevo botón BsAr-StaFe -->
             <button class="btn btn-info ml-2" id="bsarStaFeBtn" data-toggle="modal" data-target="#bsarStaFeModal">
-                <i class="bi bi-truck"></i> 34/35
+                <i class="bi bi-truck"></i>
             </button>
             <!-- Botón para filtrar por antigüedad -->
             <button class="btn btn-danger ml-2" id="filterOldestBtn" title="Filtrar por antigüedad">
