--- a/despachos.html
+++ b/despachos.html
@@ -82,11 +82,11 @@
             </button>
             <!-- Botón de Logística Propia -->
             <button class="btn btn-secondary ml-2" id="logisticaPropiaBtn" data-toggle="modal" data-target="#logisticaModal">
-                <i class="bi bi-truck"></i>
+                <i class="bi bi-truck"></i> Local
             </button>
             <!-- Nuevo botón BsAr-StaFe -->
             <button class="btn btn-info ml-2" id="bsarStaFeBtn" data-toggle="modal" data-target="#bsarStaFeModal">
-                <i class="bi bi-truck"></i>
+                <i class="bi bi-truck"></i> Interior
             </button>
             <!-- Botón para filtrar por antigüedad -->
             <button class="btn btn-danger ml-2" id="filterOldestBtn" title="Filtrar por antigüedad">
