--- a/despachos.html
+++ b/despachos.html
@@ -231,9 +231,11 @@
                     </form>
 
                     <hr class="my-2">
-                    <p class="mt-2 mb-1 text-center"><strong><i class="bi bi-info-circle-fill"></i> Sale en el camión de mañana</strong></p>
+                    <div class="btn-mc-os-Check">
+                        <p class="mt-2 mb-1 text-center"><strong><i class="bi bi-info-circle-fill"></i> Sale en el camión de mañana</strong></p>
                     <div class="form-check form-switch apple-switch">
                         <input class="form-check-input" type="checkbox" id="camionCheckbox" checked>
+                    </div>
                     </div>
 
                 </div>
