--- a/despachos.html
+++ b/despachos.html
@@ -194,38 +194,41 @@
     </div>
 
     <!-- Modal para escanear remito y adjuntar foto -->
-<div class="modal fade" id="scanRemitoModal" tabindex="-1" aria-labelledby="scanRemitoModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header bg-info text-white">
-                <h5 class="modal-title" id="scanRemitoModalLabel">Escanear Remito y Adjuntar Foto</h5>
-                <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form id="scanRemitoForm">
-                    <div class="form-group">
-                        <label for="remitoInput">Número de Remito</label>
-                        <input type="text" class="form-control" id="remitoInput" maxlength="11" placeholder="Ingrese el número de remito" autofocus>
-                    </div>
-                    <div class="form-group">
-                        <label for="fotoRemitoInput">Adjuntar Foto del Remito</label>
-                        <input type="file" class="form-control" id="fotoRemitoInput" accept="image/*" capture="camera">
-                    </div>
-                    <div id="uploadProgress" class="progress" style="display: none;">
-                        <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
-                <button type="button" class="btn btn-info" onclick="subirFoto()">Subir Foto</button>
+    <div class="modal fade" id="scanRemitoModal" tabindex="-1" aria-labelledby="scanRemitoModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header bg-info text-white">
+                    <h5 class="modal-title" id="scanRemitoModalLabel">Escanear Remito y Adjuntar Foto</h5>
+                    <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form id="scanRemitoForm">
+                        <div class="form-group">
+                            <label for="remitoInput">Número de Remito</label>
+                            <input type="text" class="form-control" id="remitoInput" maxlength="11" placeholder="Ingrese el número de remito" autofocus>
+                        </div>
+                        <div class="form-group">
+                            <label for="fotoRemitoInput">Adjuntar Foto del Remito</label>
+                            <input type="file" class="form-control" id="fotoRemitoInput" accept="image/*" capture="camera">
+                        </div>
+
+                            <div id="logisticsAlert" class="Alert34 text-center mt-2" style="display: none;"></div>
+
+                        <div id="loadingSpinner" class="spinner-border text-danger" role="status" style="display: none; width: 2rem; height: 2rem;">
+                            <span class="sr-only">Cargando...</span>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-info" onclick="subirFoto()">Subir Foto</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<!-- FIN Modal para escanear remito y adjuntar foto -->
+    <!-- FIN Modal para escanear remito y adjuntar foto -->
 
     <!-- Modal para Logística BsAr-StaFe -->
     <div class="modal fade" id="bsarStaFeModal" tabindex="-1" aria-labelledby="bsarStaFeModalLabel" aria-hidden="true">
