--- a/despachos.html
+++ b/despachos.html
@@ -215,7 +215,7 @@
                         </div>
 
                             <div id="logisticsAlert" class="Alert35 text-center mt-2" style="display: none;"></div>
-                                <div id="loadingSpinner" class="spinner-border text-info custom-spinner" role="status" style="display: none; width: 3rem; height: 3rem;">
+                                <div id="loadingSpinner" class="spinner-border text-info custom-spinner33" role="status" style="display: none; width: 3rem; height: 3rem;">
                                     <span class="sr-only">Cargando...</span>
                                 </div>
                     </form>
