--- a/despachos.html
+++ b/despachos.html
@@ -282,7 +282,7 @@
                     </div>
                     <div id="logisticsInputContainer" style="display: none;">
                         <input type="text" class="form-control mt-2" id="logisticsCpInput" maxlength="4" placeholder="Ingrese el código postal">
-                        <div id="logisticsAlert" class="Alert34 text-center mt-2" style="display: none;"></div>
+                        <div id="logisticsAlert33" class="Alert34 text-center mt-2" style="display: none;"></div>
                     </div>
                 </div>
     
